retrieved_job_application/job_application/objects/Job_Position__c.object
<CustomObject>
    <description>Job Position</description>
    <fields>
        <fullName>Candidate_Level__c</fullName>
        <inlineHelpText>Candidate Level</inlineHelpText>
        <label>Candidate Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Senior Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Lead Software Engineer</fullName>
                </value>
                <value>
                    <fullName>Junior Software Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Client for external Job Position</description>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Positions</relationshipLabel>
        <relationshipName>Job_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Offices__c</fullName>
        <description>Company Offices</description>
        <formula>CASE(Location__c, 
&quot;USA&quot;, &quot;Chicago, Boston, New York&quot;, 
&quot;Ukraine&quot;, &quot;Kyiv, Lviv, Ternopil&quot;,
&quot;Belarus&quot;,&quot;Minsk, Brest&quot;,
&quot;Poland&quot;, &quot;Wroclaw&quot;,
&quot;&quot;)</formula>
        <label>Company Offices</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Manager__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>HR Manager</description>
        <label>HR Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Positions</relationshipLabel>
        <relationshipName>Job_Positions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Position_Title__c</fullName>
        <inlineHelpText>Job Position Title</inlineHelpText>
        <label>Job Position Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ukraine</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximal_requested_salary__c</fullName>
        <description>Maximal requested salary</description>
        <label>Maximal requested salary</label>
        <summarizedField>Job_Application__c.Desired_Salary__c</summarizedField>
        <summaryForeignKey>Job_Application__c.Application_Position__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Minimal_requested_salary__c</fullName>
        <description>Minimal requested salary</description>
        <label>Minimal requested salary</label>
        <summarizedField>Job_Application__c.Desired_Salary__c</summarizedField>
        <summaryForeignKey>Job_Application__c.Application_Position__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_Due_Date__c</fullName>
        <description>Open Due Date</description>
        <label>Open Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Budget__c</fullName>
        <inlineHelpText>Job Position Budget</inlineHelpText>
        <label>Position Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position_Description__c</fullName>
        <description>Position Description</description>
        <label>Position Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Practice_Unit__c</fullName>
        <description>Willing to work remote</description>
        <label>Practice Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.Net</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_number_of_applications__c</fullName>
        <description>Total number of applications</description>
        <label>Total number of applications</label>
        <summaryForeignKey>Job_Application__c.Application_Position__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Willing_to_work_remote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Willing to work remote</description>
        <label>Willing to work remote</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JP-{0000}</displayFormat>
        <label>Job Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Positions</pluralLabel>
    <recordTypes>
        <fullName>External_Job_Position</fullName>
        <active>true</active>
        <description>External Job Position</description>
        <label>External Job Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Job_Position</fullName>
        <active>true</active>
        <description>Internal Job Position</description>
        <label>Internal Job Position</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_HR_Manager_Address_for_US_location</fullName>
        <active>true</active>
        <description>Check HR Manager Address for US Location</description>
        <errorConditionFormula>AND(  ISPICKVAL(Location__c, &quot;USA&quot;), NOT(
OR(
HR_Manager__r.MailingCountry == &quot;US&quot;,
HR_Manager__r.MailingCountry == &quot;USA&quot;,
HR_Manager__r.MailingCountry == &quot;United States&quot;
)
))</errorConditionFormula>
        <errorDisplayField>HR_Manager__c</errorDisplayField>
        <errorMessage>For location &quot;USA&quot;, HR Manager&apos;s Mailing Country should be US, USA or United States</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Open_Due_Date_for_new_records</fullName>
        <active>true</active>
        <description>Open Due Date for new records cannot be in the past</description>
        <errorConditionFormula>AND(ISNEW(), Open_Due_Date__c &lt;  TODAY())</errorConditionFormula>
        <errorDisplayField>Open_Due_Date__c</errorDisplayField>
        <errorMessage>Open Due Date of a new Job Position record cannot be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Location_Only_For_Nonremote_Work</fullName>
        <active>true</active>
        <description>Require Location Only For Nonremote Work</description>
        <errorConditionFormula>AND( Willing_to_work_remote__c = False,  ISBLANK(TEXT(Location__c)))</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Location is mandatory for non-remote Job Positions.</errorMessage>
    </validationRules>
</CustomObject>